# calculadora-fastapi-libnew

./: README.md  pyproject.toml  setup.py
calculadora-fastapi-lib-main/calculatornew_lib.egg-info/: PKG-INFO  SOURCES.txt
calculator_lib.egg-info/: PKG-INFO  SOURCES.txt
calculator_lib_brunoowcx.egg-info/: SOURCES.txt
