[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-lib-brunoowcx"
version = "0.1.1"
authors = [
    {name = "Bruno Alves de Moraes", email = "brunowcxl@gmail.com"},
]
description = "Biblioteca de operações matemáticas básicas em Python com raiz e exponencial."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/brunowcx/calculadora-fastapi-lib"